<resources>
    <string name="app_name">NoteKeeper</string>

    <string name="navigation_drawer_open">Open menu</string>
    <string name="navigation_drawer_close">Close menu</string>

    <string name="action_settings">Settings</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_remember_me">Remember me</string>
    <string name="login_signin">Sign in</string>
    <string name="login_signup">Sign up</string>
    <string name="login_username_error">The username field is required!</string>
    <string name="login_password_error">The password is required!</string>
    <string name="login_invalid_signin">Invalid username or password!</string>
    <string name="login_duplicate_user">A user with this username already exists on the database!</string>
    <string name="login_create_success">User created successfuly!</string>
    <string name="login_create_error_generic">Error saving login on the database!</string>
    <string name="login_successfull">Logged successfully!</string>
    <string name="action_logoff">Logoff</string>
    <string name="loading_users_error_title">Error</string>
    <string name="loading_users_error_message">Unnable to load users from de api</string>
    <string name="facebook_app_id" translatable="false">115887532434856</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb115887532434856</string>
    <string name="facebook_login_failed">Facebook login failed</string>
    <string name="fabook_login_error_system_title">Error login facebook</string>
    <string name="facebook_login_error_system_msg">The system was unnable to loggin with facebook</string>
    <string name="login_facebook_canceled">Login canceled by the user!</string>
    <string name="facebook_login_success">Facebook login was successful</string>
    <string name="create_note_label">Note</string>
    <string name="btn_cancel_create_note">Cancel</string>
    <string name="btn_create_note">Save</string>
    <string name="create_note_empt_text_error">The note text is required!</string>
    <string name="app_version_text">App version:</string>
    <string name="title_activity_where_am_i">Map</string>
    <string name="delete_note_success_rc">Note successfuly deleted!</string>
    <string name="delete_note_error_rc">Error deleting note!</string>
    <string name="note_success_updating">Note successfuly updateted!</string>
    <string name="note_error_updating">Error while updating the note.</string>
    <string name="share_note">Share</string>
    <string name="share_note_title">Shared on </string>
    <string name="share_note_via">Share via</string>
    <string name="menu_logoff_button">Signoff</string>
    <string name="menu_where_are_you">Where are you</string>
    <string name="menu_about">About this app</string>
    <string name="menu_create_note">Create note</string>
</resources>
