<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/createNote"
            android:icon="@drawable/ic_action_edit_dark"
            android:title="@string/menu_create_note" />
        <item
            android:id="@+id/about"
            android:icon="@drawable/ic_action_about"
            android:title="@string/menu_about" />

        <item
            android:id="@+id/map"
            android:icon="@drawable/ic_add_location"
            android:title="@string/menu_where_are_you" />
        <!--

        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Slideshow" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="Tools" />
            -->
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/ic_mn_close"
                android:icon="@drawable/ic_action_logoff_light"
                android:title="@string/menu_logoff_button" />
        </menu>
    </item>

</menu>
